db change, ui edit/add

--- a/customers.management.web/appsettings.json
+++ b/customers.management.web/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
 	"ConnectionStrings": {
-		"DefaultConnection": "Data Source=(localdb)\\ProjectsV13;Initial Catalog=customers.management.db;Integrated Security=True;Pooling=False;Connect Timeout=30"
+		"DefaultConnection": "Data Source=(localdb)\\ProjectsV13;Initial Catalog=customers.management.db_1;Integrated Security=True;Pooling=False;Connect Timeout=30"
 	},
 	"UserSettings": {
 		"Useremail": "admin@email.com",
